versions/0.8.0/_sources/refs/_aws-cdk_aws-glue.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"VLU7tSpbHRXQ5xx8aDynmvqAom3/BF5rumpVJ2duc4w="}

@aws-cdk/aws-glue
=================

.. mdinclude:: ./__aws-cdk_aws-glue.README.md

Reference
---------

.. py:module:: @aws-cdk/aws-glue


cloudformation
^^^^^^^^^^^^^^
.. py:module:: @aws-cdk/aws-glue.cloudformation

ClassifierResource
~~~~~~~~~~~~~~~~~~

.. py:class:: ClassifierResource(parent, name, [properties])

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ClassifierResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ClassifierResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.ClassifierResourceProps` or undefined

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: GrokClassifierProperty



      .. py:attribute:: classification

         ``ClassifierResource.GrokClassifierProperty.Classification``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-classifier-grokclassifier.html#cfn-glue-classifier-grokclassifier-classification


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: customPatterns

         ``ClassifierResource.GrokClassifierProperty.CustomPatterns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-classifier-grokclassifier.html#cfn-glue-classifier-grokclassifier-custompatterns


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: grokPattern

         ``ClassifierResource.GrokClassifierProperty.GrokPattern``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-classifier-grokclassifier.html#cfn-glue-classifier-grokclassifier-grokpattern


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: name

         ``ClassifierResource.GrokClassifierProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-classifier-grokclassifier.html#cfn-glue-classifier-grokclassifier-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



ClassifierResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ClassifierResourceProps



   .. py:attribute:: grokClassifier

      ``AWS::Glue::Classifier.GrokClassifier``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-classifier.html#cfn-glue-classifier-grokclassifier


      :type: :py:class:`~@aws-cdk/aws-glue.cloudformation.ClassifierResource.GrokClassifierProperty` or :py:class:`@aws-cdk/cdk.Token` or undefined


ConnectionResource
~~~~~~~~~~~~~~~~~~

.. py:class:: ConnectionResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``ConnectionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``ConnectionResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.ConnectionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ConnectionInputProperty



      .. py:attribute:: connectionProperties

         ``ConnectionResource.ConnectionInputProperty.ConnectionProperties``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-connectioninput.html#cfn-glue-connection-connectioninput-connectionproperties


         :type: json or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: connectionType

         ``ConnectionResource.ConnectionInputProperty.ConnectionType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-connectioninput.html#cfn-glue-connection-connectioninput-connectiontype


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: description

         ``ConnectionResource.ConnectionInputProperty.Description``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-connectioninput.html#cfn-glue-connection-connectioninput-description


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: matchCriteria

         ``ConnectionResource.ConnectionInputProperty.MatchCriteria``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-connectioninput.html#cfn-glue-connection-connectioninput-matchcriteria


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: name

         ``ConnectionResource.ConnectionInputProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-connectioninput.html#cfn-glue-connection-connectioninput-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: physicalConnectionRequirements

         ``ConnectionResource.ConnectionInputProperty.PhysicalConnectionRequirements``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-connectioninput.html#cfn-glue-connection-connectioninput-physicalconnectionrequirements


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.ConnectionResource.PhysicalConnectionRequirementsProperty` or undefined


   .. py:class:: PhysicalConnectionRequirementsProperty



      .. py:attribute:: availabilityZone

         ``ConnectionResource.PhysicalConnectionRequirementsProperty.AvailabilityZone``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-physicalconnectionrequirements.html#cfn-glue-connection-physicalconnectionrequirements-availabilityzone


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: securityGroupIdList

         ``ConnectionResource.PhysicalConnectionRequirementsProperty.SecurityGroupIdList``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-physicalconnectionrequirements.html#cfn-glue-connection-physicalconnectionrequirements-securitygroupidlist


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: subnetId

         ``ConnectionResource.PhysicalConnectionRequirementsProperty.SubnetId``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-connection-physicalconnectionrequirements.html#cfn-glue-connection-physicalconnectionrequirements-subnetid


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



ConnectionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: ConnectionResourceProps



   .. py:attribute:: catalogId

      ``AWS::Glue::Connection.CatalogId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-connection.html#cfn-glue-connection-catalogid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: connectionInput

      ``AWS::Glue::Connection.ConnectionInput``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-connection.html#cfn-glue-connection-connectioninput


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.ConnectionResource.ConnectionInputProperty`


CrawlerResource
~~~~~~~~~~~~~~~

.. py:class:: CrawlerResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``CrawlerResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``CrawlerResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.CrawlerResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: JdbcTargetProperty



      .. py:attribute:: connectionName

         ``CrawlerResource.JdbcTargetProperty.ConnectionName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-jdbctarget.html#cfn-glue-crawler-jdbctarget-connectionname


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: exclusions

         ``CrawlerResource.JdbcTargetProperty.Exclusions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-jdbctarget.html#cfn-glue-crawler-jdbctarget-exclusions


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: path

         ``CrawlerResource.JdbcTargetProperty.Path``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-jdbctarget.html#cfn-glue-crawler-jdbctarget-path


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: S3TargetProperty



      .. py:attribute:: exclusions

         ``CrawlerResource.S3TargetProperty.Exclusions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-s3target.html#cfn-glue-crawler-s3target-exclusions


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: path

         ``CrawlerResource.S3TargetProperty.Path``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-s3target.html#cfn-glue-crawler-s3target-path


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ScheduleProperty



      .. py:attribute:: scheduleExpression

         ``CrawlerResource.ScheduleProperty.ScheduleExpression``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-schedule.html#cfn-glue-crawler-schedule-scheduleexpression


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: SchemaChangePolicyProperty



      .. py:attribute:: deleteBehavior

         ``CrawlerResource.SchemaChangePolicyProperty.DeleteBehavior``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-schemachangepolicy.html#cfn-glue-crawler-schemachangepolicy-deletebehavior


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: updateBehavior

         ``CrawlerResource.SchemaChangePolicyProperty.UpdateBehavior``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-schemachangepolicy.html#cfn-glue-crawler-schemachangepolicy-updatebehavior


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TargetsProperty



      .. py:attribute:: jdbcTargets

         ``CrawlerResource.TargetsProperty.JdbcTargets``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-targets.html#cfn-glue-crawler-targets-jdbctargets


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.CrawlerResource.JdbcTargetProperty` or undefined


      .. py:attribute:: s3Targets

         ``CrawlerResource.TargetsProperty.S3Targets``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-crawler-targets.html#cfn-glue-crawler-targets-s3targets


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.CrawlerResource.S3TargetProperty` or undefined



CrawlerResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: CrawlerResourceProps



   .. py:attribute:: databaseName

      ``AWS::Glue::Crawler.DatabaseName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-databasename


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: role

      ``AWS::Glue::Crawler.Role``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-role


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: targets

      ``AWS::Glue::Crawler.Targets``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-targets


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.CrawlerResource.TargetsProperty`


   .. py:attribute:: classifiers

      ``AWS::Glue::Crawler.Classifiers``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-classifiers


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::Glue::Crawler.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: crawlerName

      ``AWS::Glue::Crawler.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: schedule

      ``AWS::Glue::Crawler.Schedule``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-schedule


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.CrawlerResource.ScheduleProperty` or undefined


   .. py:attribute:: schemaChangePolicy

      ``AWS::Glue::Crawler.SchemaChangePolicy``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-schemachangepolicy


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.CrawlerResource.SchemaChangePolicyProperty` or undefined


   .. py:attribute:: tablePrefix

      ``AWS::Glue::Crawler.TablePrefix``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-crawler.html#cfn-glue-crawler-tableprefix


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


DatabaseResource
~~~~~~~~~~~~~~~~

.. py:class:: DatabaseResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DatabaseResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DatabaseResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.DatabaseResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: DatabaseInputProperty



      .. py:attribute:: description

         ``DatabaseResource.DatabaseInputProperty.Description``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-database-databaseinput.html#cfn-glue-database-databaseinput-description


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: locationUri

         ``DatabaseResource.DatabaseInputProperty.LocationUri``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-database-databaseinput.html#cfn-glue-database-databaseinput-locationuri


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: name

         ``DatabaseResource.DatabaseInputProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-database-databaseinput.html#cfn-glue-database-databaseinput-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: parameters

         ``DatabaseResource.DatabaseInputProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-database-databaseinput.html#cfn-glue-database-databaseinput-parameters


         :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined



DatabaseResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DatabaseResourceProps



   .. py:attribute:: catalogId

      ``AWS::Glue::Database.CatalogId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-database.html#cfn-glue-database-catalogid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: databaseInput

      ``AWS::Glue::Database.DatabaseInput``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-database.html#cfn-glue-database-databaseinput


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.DatabaseResource.DatabaseInputProperty`


DevEndpointResource
~~~~~~~~~~~~~~~~~~~

.. py:class:: DevEndpointResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``DevEndpointResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``DevEndpointResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.DevEndpointResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*


DevEndpointResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: DevEndpointResourceProps



   .. py:attribute:: publicKey

      ``AWS::Glue::DevEndpoint.PublicKey``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-devendpoint.html#cfn-glue-devendpoint-publickey


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: roleArn

      ``AWS::Glue::DevEndpoint.RoleArn``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-devendpoint.html#cfn-glue-devendpoint-rolearn


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: endpointName

      ``AWS::Glue::DevEndpoint.EndpointName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-devendpoint.html#cfn-glue-devendpoint-endpointname


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: extraJarsS3Path

      ``AWS::Glue::DevEndpoint.ExtraJarsS3Path``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-devendpoint.html#cfn-glue-devendpoint-extrajarss3path


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: extraPythonLibsS3Path

      ``AWS::Glue::DevEndpoint.ExtraPythonLibsS3Path``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-devendpoint.html#cfn-glue-devendpoint-extrapythonlibss3path


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: numberOfNodes

      ``AWS::Glue::DevEndpoint.NumberOfNodes``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-devendpoint.html#cfn-glue-devendpoint-numberofnodes


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: securityGroupIds

      ``AWS::Glue::DevEndpoint.SecurityGroupIds``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-devendpoint.html#cfn-glue-devendpoint-securitygroupids


      :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: subnetId

      ``AWS::Glue::DevEndpoint.SubnetId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-devendpoint.html#cfn-glue-devendpoint-subnetid


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


JobResource
~~~~~~~~~~~

.. py:class:: JobResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``JobResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``JobResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.JobResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ConnectionsListProperty



      .. py:attribute:: connections

         ``JobResource.ConnectionsListProperty.Connections``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-job-connectionslist.html#cfn-glue-job-connectionslist-connections


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ExecutionPropertyProperty



      .. py:attribute:: maxConcurrentRuns

         ``JobResource.ExecutionPropertyProperty.MaxConcurrentRuns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-job-executionproperty.html#cfn-glue-job-executionproperty-maxconcurrentruns


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: JobCommandProperty



      .. py:attribute:: name

         ``JobResource.JobCommandProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-job-jobcommand.html#cfn-glue-job-jobcommand-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: scriptLocation

         ``JobResource.JobCommandProperty.ScriptLocation``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-job-jobcommand.html#cfn-glue-job-jobcommand-scriptlocation


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



JobResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: JobResourceProps



   .. py:attribute:: command

      ``AWS::Glue::Job.Command``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-command


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.JobResource.JobCommandProperty`


   .. py:attribute:: role

      ``AWS::Glue::Job.Role``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-role


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: allocatedCapacity

      ``AWS::Glue::Job.AllocatedCapacity``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-allocatedcapacity


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: connections

      ``AWS::Glue::Job.Connections``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-connections


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.JobResource.ConnectionsListProperty` or undefined


   .. py:attribute:: defaultArguments

      ``AWS::Glue::Job.DefaultArguments``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-defaultarguments


      :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: description

      ``AWS::Glue::Job.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: executionProperty

      ``AWS::Glue::Job.ExecutionProperty``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-executionproperty


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.JobResource.ExecutionPropertyProperty` or undefined


   .. py:attribute:: logUri

      ``AWS::Glue::Job.LogUri``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-loguri


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: maxRetries

      ``AWS::Glue::Job.MaxRetries``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-maxretries


      :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: jobName

      ``AWS::Glue::Job.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-job.html#cfn-glue-job-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


PartitionResource
~~~~~~~~~~~~~~~~~

.. py:class:: PartitionResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``PartitionResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``PartitionResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.PartitionResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ColumnProperty



      .. py:attribute:: comment

         ``PartitionResource.ColumnProperty.Comment``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-column.html#cfn-glue-partition-column-comment


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: name

         ``PartitionResource.ColumnProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-column.html#cfn-glue-partition-column-name


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: type

         ``PartitionResource.ColumnProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-column.html#cfn-glue-partition-column-type


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: OrderProperty



      .. py:attribute:: column

         ``PartitionResource.OrderProperty.Column``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-order.html#cfn-glue-partition-order-column


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: sortOrder

         ``PartitionResource.OrderProperty.SortOrder``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-order.html#cfn-glue-partition-order-sortorder


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: PartitionInputProperty



      .. py:attribute:: parameters

         ``PartitionResource.PartitionInputProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-partitioninput.html#cfn-glue-partition-partitioninput-parameters


         :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: storageDescriptor

         ``PartitionResource.PartitionInputProperty.StorageDescriptor``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-partitioninput.html#cfn-glue-partition-partitioninput-storagedescriptor


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.PartitionResource.StorageDescriptorProperty` or undefined


      .. py:attribute:: values

         ``PartitionResource.PartitionInputProperty.Values``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-partitioninput.html#cfn-glue-partition-partitioninput-values


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SerdeInfoProperty



      .. py:attribute:: name

         ``PartitionResource.SerdeInfoProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-serdeinfo.html#cfn-glue-partition-serdeinfo-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: parameters

         ``PartitionResource.SerdeInfoProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-serdeinfo.html#cfn-glue-partition-serdeinfo-parameters


         :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: serializationLibrary

         ``PartitionResource.SerdeInfoProperty.SerializationLibrary``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-serdeinfo.html#cfn-glue-partition-serdeinfo-serializationlibrary


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: SkewedInfoProperty



      .. py:attribute:: skewedColumnNames

         ``PartitionResource.SkewedInfoProperty.SkewedColumnNames``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-skewedinfo.html#cfn-glue-partition-skewedinfo-skewedcolumnnames


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: skewedColumnValueLocationMaps

         ``PartitionResource.SkewedInfoProperty.SkewedColumnValueLocationMaps``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-skewedinfo.html#cfn-glue-partition-skewedinfo-skewedcolumnvaluelocationmaps


         :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: skewedColumnValues

         ``PartitionResource.SkewedInfoProperty.SkewedColumnValues``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-skewedinfo.html#cfn-glue-partition-skewedinfo-skewedcolumnvalues


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: StorageDescriptorProperty



      .. py:attribute:: bucketColumns

         ``PartitionResource.StorageDescriptorProperty.BucketColumns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-bucketcolumns


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: columns

         ``PartitionResource.StorageDescriptorProperty.Columns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-columns


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.PartitionResource.ColumnProperty` or undefined


      .. py:attribute:: compressed

         ``PartitionResource.StorageDescriptorProperty.Compressed``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-compressed


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: inputFormat

         ``PartitionResource.StorageDescriptorProperty.InputFormat``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-inputformat


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: location

         ``PartitionResource.StorageDescriptorProperty.Location``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-location


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: numberOfBuckets

         ``PartitionResource.StorageDescriptorProperty.NumberOfBuckets``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-numberofbuckets


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: outputFormat

         ``PartitionResource.StorageDescriptorProperty.OutputFormat``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-outputformat


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: parameters

         ``PartitionResource.StorageDescriptorProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-parameters


         :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: serdeInfo

         ``PartitionResource.StorageDescriptorProperty.SerdeInfo``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-serdeinfo


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.PartitionResource.SerdeInfoProperty` or undefined


      .. py:attribute:: skewedInfo

         ``PartitionResource.StorageDescriptorProperty.SkewedInfo``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-skewedinfo


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.PartitionResource.SkewedInfoProperty` or undefined


      .. py:attribute:: sortColumns

         ``PartitionResource.StorageDescriptorProperty.SortColumns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-sortcolumns


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.PartitionResource.OrderProperty` or undefined


      .. py:attribute:: storedAsSubDirectories

         ``PartitionResource.StorageDescriptorProperty.StoredAsSubDirectories``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-partition-storagedescriptor.html#cfn-glue-partition-storagedescriptor-storedassubdirectories


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined



PartitionResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: PartitionResourceProps



   .. py:attribute:: catalogId

      ``AWS::Glue::Partition.CatalogId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-partition.html#cfn-glue-partition-catalogid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: databaseName

      ``AWS::Glue::Partition.DatabaseName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-partition.html#cfn-glue-partition-databasename


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: partitionInput

      ``AWS::Glue::Partition.PartitionInput``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-partition.html#cfn-glue-partition-partitioninput


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.PartitionResource.PartitionInputProperty`


   .. py:attribute:: tableName

      ``AWS::Glue::Partition.TableName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-partition.html#cfn-glue-partition-tablename


      :type: string or :py:class:`@aws-cdk/cdk.Token`


TableResource
~~~~~~~~~~~~~

.. py:class:: TableResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TableResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TableResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.TableResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ColumnProperty



      .. py:attribute:: comment

         ``TableResource.ColumnProperty.Comment``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-column.html#cfn-glue-table-column-comment


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: name

         ``TableResource.ColumnProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-column.html#cfn-glue-table-column-name


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: type

         ``TableResource.ColumnProperty.Type``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-column.html#cfn-glue-table-column-type


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: OrderProperty



      .. py:attribute:: column

         ``TableResource.OrderProperty.Column``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-order.html#cfn-glue-table-order-column


         :type: string or :py:class:`@aws-cdk/cdk.Token`


      .. py:attribute:: sortOrder

         ``TableResource.OrderProperty.SortOrder``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-order.html#cfn-glue-table-order-sortorder


         :type: number or :py:class:`@aws-cdk/cdk.Token`


   .. py:class:: SerdeInfoProperty



      .. py:attribute:: name

         ``TableResource.SerdeInfoProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-serdeinfo.html#cfn-glue-table-serdeinfo-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: parameters

         ``TableResource.SerdeInfoProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-serdeinfo.html#cfn-glue-table-serdeinfo-parameters


         :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: serializationLibrary

         ``TableResource.SerdeInfoProperty.SerializationLibrary``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-serdeinfo.html#cfn-glue-table-serdeinfo-serializationlibrary


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: SkewedInfoProperty



      .. py:attribute:: skewedColumnNames

         ``TableResource.SkewedInfoProperty.SkewedColumnNames``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-skewedinfo.html#cfn-glue-table-skewedinfo-skewedcolumnnames


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: skewedColumnValueLocationMaps

         ``TableResource.SkewedInfoProperty.SkewedColumnValueLocationMaps``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-skewedinfo.html#cfn-glue-table-skewedinfo-skewedcolumnvaluelocationmaps


         :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: skewedColumnValues

         ``TableResource.SkewedInfoProperty.SkewedColumnValues``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-skewedinfo.html#cfn-glue-table-skewedinfo-skewedcolumnvalues


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: StorageDescriptorProperty



      .. py:attribute:: bucketColumns

         ``TableResource.StorageDescriptorProperty.BucketColumns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-bucketcolumns


         :type: :py:class:`@aws-cdk/cdk.Token` or string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: columns

         ``TableResource.StorageDescriptorProperty.Columns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-columns


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TableResource.ColumnProperty` or undefined


      .. py:attribute:: compressed

         ``TableResource.StorageDescriptorProperty.Compressed``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-compressed


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: inputFormat

         ``TableResource.StorageDescriptorProperty.InputFormat``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-inputformat


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: location

         ``TableResource.StorageDescriptorProperty.Location``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-location


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: numberOfBuckets

         ``TableResource.StorageDescriptorProperty.NumberOfBuckets``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-numberofbuckets


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: outputFormat

         ``TableResource.StorageDescriptorProperty.OutputFormat``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-outputformat


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: parameters

         ``TableResource.StorageDescriptorProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-parameters


         :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: serdeInfo

         ``TableResource.StorageDescriptorProperty.SerdeInfo``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-serdeinfo


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TableResource.SerdeInfoProperty` or undefined


      .. py:attribute:: skewedInfo

         ``TableResource.StorageDescriptorProperty.SkewedInfo``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-skewedinfo


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TableResource.SkewedInfoProperty` or undefined


      .. py:attribute:: sortColumns

         ``TableResource.StorageDescriptorProperty.SortColumns``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-sortcolumns


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TableResource.OrderProperty` or undefined


      .. py:attribute:: storedAsSubDirectories

         ``TableResource.StorageDescriptorProperty.StoredAsSubDirectories``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-storagedescriptor.html#cfn-glue-table-storagedescriptor-storedassubdirectories


         :type: boolean or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: TableInputProperty



      .. py:attribute:: description

         ``TableResource.TableInputProperty.Description``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-description


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: name

         ``TableResource.TableInputProperty.Name``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-name


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: owner

         ``TableResource.TableInputProperty.Owner``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-owner


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: parameters

         ``TableResource.TableInputProperty.Parameters``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-parameters


         :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: partitionKeys

         ``TableResource.TableInputProperty.PartitionKeys``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-partitionkeys


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TableResource.ColumnProperty` or undefined


      .. py:attribute:: retention

         ``TableResource.TableInputProperty.Retention``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-retention


         :type: number or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: storageDescriptor

         ``TableResource.TableInputProperty.StorageDescriptor``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-storagedescriptor


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TableResource.StorageDescriptorProperty` or undefined


      .. py:attribute:: tableType

         ``TableResource.TableInputProperty.TableType``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-tabletype


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: viewExpandedText

         ``TableResource.TableInputProperty.ViewExpandedText``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-viewexpandedtext


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: viewOriginalText

         ``TableResource.TableInputProperty.ViewOriginalText``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-table-tableinput.html#cfn-glue-table-tableinput-vieworiginaltext


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



TableResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TableResourceProps



   .. py:attribute:: catalogId

      ``AWS::Glue::Table.CatalogId``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-table.html#cfn-glue-table-catalogid


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: databaseName

      ``AWS::Glue::Table.DatabaseName``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-table.html#cfn-glue-table-databasename


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: tableInput

      ``AWS::Glue::Table.TableInput``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-table.html#cfn-glue-table-tableinput


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TableResource.TableInputProperty`


TriggerResource
~~~~~~~~~~~~~~~

.. py:class:: TriggerResource(parent, name, properties)

   :extends: :py:class:`@aws-cdk/cdk.Resource`
   :param parent: the ``cdk.Construct`` this ``TriggerResource`` is a part of
   :type parent: :py:class:`@aws-cdk/cdk.Construct`
   :param name: the name of the resource in the ``cdk.Construct`` tree
   :type name: string
   :param properties: the properties of this ``TriggerResource``
   :type properties: :py:class:`~@aws-cdk/aws-glue.cloudformation.TriggerResourceProps`

   .. py:method:: renderProperties() -> string => any

      :rtype: any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.


      :type: string *(readonly)* *(static)*

   .. py:class:: ActionProperty



      .. py:attribute:: arguments

         ``TriggerResource.ActionProperty.Arguments``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-trigger-action.html#cfn-glue-trigger-action-arguments


         :type: json or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: jobName

         ``TriggerResource.ActionProperty.JobName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-trigger-action.html#cfn-glue-trigger-action-jobname


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: ConditionProperty



      .. py:attribute:: jobName

         ``TriggerResource.ConditionProperty.JobName``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-trigger-condition.html#cfn-glue-trigger-condition-jobname


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: logicalOperator

         ``TriggerResource.ConditionProperty.LogicalOperator``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-trigger-condition.html#cfn-glue-trigger-condition-logicaloperator


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


      .. py:attribute:: state

         ``TriggerResource.ConditionProperty.State``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-trigger-condition.html#cfn-glue-trigger-condition-state


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:class:: PredicateProperty



      .. py:attribute:: conditions

         ``TriggerResource.PredicateProperty.Conditions``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-trigger-predicate.html#cfn-glue-trigger-predicate-conditions


         :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TriggerResource.ConditionProperty` or undefined


      .. py:attribute:: logical

         ``TriggerResource.PredicateProperty.Logical``
         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-glue-trigger-predicate.html#cfn-glue-trigger-predicate-logical


         :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



TriggerResourceProps (interface)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. py:class:: TriggerResourceProps



   .. py:attribute:: actions

      ``AWS::Glue::Trigger.Actions``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-trigger.html#cfn-glue-trigger-actions


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TriggerResource.ActionProperty`


   .. py:attribute:: type

      ``AWS::Glue::Trigger.Type``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-trigger.html#cfn-glue-trigger-type


      :type: string or :py:class:`@aws-cdk/cdk.Token`


   .. py:attribute:: description

      ``AWS::Glue::Trigger.Description``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-trigger.html#cfn-glue-trigger-description


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: triggerName

      ``AWS::Glue::Trigger.Name``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-trigger.html#cfn-glue-trigger-name


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined


   .. py:attribute:: predicate

      ``AWS::Glue::Trigger.Predicate``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-trigger.html#cfn-glue-trigger-predicate


      :type: :py:class:`@aws-cdk/cdk.Token` or :py:class:`~@aws-cdk/aws-glue.cloudformation.TriggerResource.PredicateProperty` or undefined


   .. py:attribute:: schedule

      ``AWS::Glue::Trigger.Schedule``
      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-glue-trigger.html#cfn-glue-trigger-schedule


      :type: string or :py:class:`@aws-cdk/cdk.Token` or undefined



.. py:currentmodule:: @aws-cdk/aws-glue

